member 편의메서드 추가